# BIoCompute-SSN-Simulator

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/guide/: page.tsx
app/science/: page.tsx
components/: ControlPanel.tsx  EventList.tsx  NanoporeAnimation.tsx  TraceChart.tsx
lib/: electronics.ts  physics.ts  simulation.ts
wasm-engine/: Cargo.toml
wasm-engine/src/: lib.rs
