[package]
name = "wasm-engine"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3" # Allows us to use JavaScript's Math.random() inside Rust
rustfft = "6.2"